--- a/Ortis/Views/LaunchScreen.storyboard
+++ b/Ortis/Views/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,23 +28,27 @@
                                     <constraint firstAttribute="width" constant="150" id="XXo-V8-9h7"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ortis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bl-cU-eO4">
-                                <rect key="frame" x="181" y="538" width="52.5" height="30"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bl-cU-eO4">
+                                <rect key="frame" x="174" y="538" width="66" height="274"/>
+                                <string key="text">O R T I S 
+</string>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <color key="textColor" red="0.83137255909999996" green="0.8392156959" blue="0.6549019814" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="0bl-cU-eO4" secondAttribute="bottom" constant="100" id="DA2-aw-3DU"/>
                             <constraint firstItem="9OU-AW-Wcc" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="G4T-O8-Cm5"/>
                             <constraint firstItem="0bl-cU-eO4" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="M2e-is-KHr"/>
                             <constraint firstItem="0bl-cU-eO4" firstAttribute="top" secondItem="9OU-AW-Wcc" secondAttribute="bottom" constant="15" id="NeO-QN-s0C"/>
                             <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
                             <constraint firstItem="9OU-AW-Wcc" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="TgR-Ks-rsA"/>
                             <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="0bl-cU-eO4" secondAttribute="bottom" constant="50" id="jkX-3T-BAy"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -56,8 +59,5 @@
     </scenes>
     <resources>
         <image name="Image" width="888" height="886"/>
-        <systemColor name="tertiarySystemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
